A3/pathfinder/log/build_2025-04-24_14-00-18/drive/stderr.log
  File "/home/jestin/SegFaultExp/A3/pathfinder/install/drive/lib/python3.10/site-packages/drive/driver.py", line 13
    self.
         ^
SyntaxError: invalid syntax

